--- a/project/options.html
+++ b/project/options.html
@@ -585,7 +585,7 @@ li p {
 function anthology(e) {
   console.error(e)
    var story_book_name = e
-   prelim_function("/csv/" +story_book_name+".csv")
+   prelim_function("/project/csv/" +story_book_name+".csv")
 
 
 }
