--- a/project/example3.html
+++ b/project/example3.html
@@ -43,5 +43,5 @@
 
 <a style = "margin-right:60px" href="options.html" class="button2 b-pink rot-135">Enter the library</a>
  
-<a style = "margin-right:60px" href="thing.html" class="button2 b-pink rot-135">Popular Fairytale Retellings</a>
+<a style = "margin-right:60px" href="visualization.html" class="button2 b-pink rot-135">Popular Fairytale Retellings</a>
 <a style = "margin-right:60px" href="options.html" class="button2 b-pink rot-135">Video 1</a>
