--- a/project/example3.html
+++ b/project/example3.html
@@ -44,4 +44,4 @@
 <a style = "margin-right:60px" href="options.html" class="button2 b-pink rot-135">Enter the library</a>
  
 <a style = "margin-right:60px" href="visualization.html" class="button2 b-pink rot-135">Popular Fairytale Retellings</a>
-<a style = "margin-right:60px" href="options.html" class="button2 b-pink rot-135">Video 1</a>
+<a style = "margin-right:60px" href="video.html" class="button2 b-pink rot-135">Video</a>
