--- a/project/example3.html
+++ b/project/example3.html
@@ -45,3 +45,5 @@
  
 <a style = "margin-right:60px" href="visualization.html" class="button2 b-pink rot-135">Popular Fairytale Retellings</a>
 <a style = "margin-right:60px" href="video.html" class="button2 b-pink rot-135">Video</a>
+<a style = "margin-right:60px" href="bookFlip/index.html" class="button2 b-pink rot-135">Sleepy time Stories </a>
+
