--- a/project/bookFlip/index.html
+++ b/project/bookFlip/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>A Pen by  ore</title>
+  <title>Sleepy Stories</title>
   
   
   
@@ -17,7 +17,7 @@
   <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>Booklet - jQuery Plugin</title>
+    <title>Flipping virtual pages</title>
 
     <!--[if lt IE 9]><script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 
