--- a/project/example3.html
+++ b/project/example3.html
@@ -44,6 +44,6 @@
 <a style = "margin-right:60px" href="options.html" class="button2 b-pink rot-135">Enter the library</a>
  
 <a style = "margin-right:60px" href="visualization.html" class="button2 b-pink rot-135">Popular Fairytale Retellings</a>
-<a style = "margin-right:60px" href="video1.html" class="button2 b-pink rot-135">Video</a>
+<a style = "margin-right:60px" href="laptop-princess.html" class="button2 b-pink rot-135">Video</a>
 <a style = "margin-right:60px" href="bookFlip/index.html" class="button2 b-pink rot-135">Sleepy time Stories </a>
 
