--- a/a8/index.html
+++ b/a8/index.html
@@ -111,7 +111,14 @@ There are several way
     </main>
   
       
-        			<h2 class="card-title">2) Describe the nature of the graphical quality and how it is relevant to the story. </h2>
+        			<h2 class="card-title">2) 3. Describe the nature of the interaction and how it influences choices and how the player feels.  </h2>
 
-
+The nature of interaction definitely influenced how the player feels. 
+      For example most of your interactions are monotonous and repetitive. 
+      The game in itself is very repetitive, and this can make the player annoyed, and kind of sad. 
+      You are constantly looking for escape and alteration. One of the most interesting interactions with other characters,
+      was the interaction with the homeless man. He takes you to a graveyard, a foreshadowing of things to come.
+      Is death the only option? Overall this game seems to really appreciate tranquility, as the character also interacts with nature 
+      (cow, leaf) this made me feel serene but also sad. Because there is a depressing edge that the game has. 
+      It seems to tell us modern life is full of sadness and will/can push us over the literal edge 
 </body></html>
