--- a/index.html
+++ b/index.html
@@ -155,8 +155,11 @@ img:last-of-type {
 			 <a href="https://orearow.github.io/art321/a6/index.html">Link to assigment 6!</a>
 <br> 
 				 <a href="https://orearow.github.io/art321/a7/index.html">Link to assigment 7!</a><br>
+			 <a href="https://orearow.github.io/art321/a8/index.html">Link to assigment 8!</a><br>
+
 				 <a href="https://orearow.github.io/art321/project/example3.html
-">Link to assigment 7!</a>
+">Link to project!</a><br>
+
 
 
 </body>
