--- a/a8/index.html
+++ b/a8/index.html
@@ -11,7 +11,7 @@
 
   	<main>
   		<div>
-  			<h2 class="card-title">Game Play Steps </h2>
+  			<h2 class="card-title">Game Play Steps - Every Day a new Day </h2>
  
  1)	I walk around the room going left to right a few times eventually I decide to turn off my alarm and the red flashing light turns off <br>
 2)	I put on my wardrobe and suddenly I am in a suit 
