--- a/project/example3.html
+++ b/project/example3.html
@@ -46,4 +46,5 @@
 <a style = "margin-right:60px" href="visualization.html" class="button2 b-pink rot-135">Popular Fairytale Retellings</a>
 <a style = "margin-right:60px" href="laptop-princess.html" class="button2 b-pink rot-135">A film</a>
 <a style = "margin-right:60px" href="bookFlip/index.html" class="button2 b-pink rot-135">Sleepy time Stories </a>
+<a style = "margin-right:60px" href="citations/index.html" class="button2 b-pink rot-135">Citations </a>
 
